Add proto and clientworker

--- a/flink-contrib/pom.xml
+++ b/flink-contrib/pom.xml
@@ -37,6 +37,7 @@ under the License.
 
 	<modules>
 		<module>flink-connector-wikiedits</module>
+		<module>psl-utils</module>
 	</modules>
 
 	<dependencies>
